fix in div footer circle overflow hidden & redes-links with pseudoclass hover

--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,6 @@ body {
   width: 100%;
   height: 100%;
   right: -80px;
-  z-index: -1;
 }
 
 .nav {
@@ -159,7 +158,6 @@ body {
   background-image: url(../images/background_reservation.svg);
   background-size: cover;
   background-position: center;
-  z-index: 0;
 }
 
 .form_title {
@@ -256,22 +254,23 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: -1;
 
   padding-top: 60px;
   padding-left: 80px;
   padding-right: 80px;
+  overflow: hidden;
 }
 
 .footer__circle {
   position: absolute;
   background-color: #e96e3a;
-  z-index: -1;
   width: 340px;
   height: 340px;
   left: -84px;
   top: -152px;
   border-radius: 340px;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .footer__content {
@@ -292,7 +291,6 @@ body {
 .footer__redes {
   display: flex;
   flex-direction: column;
-  z-index: 2;
 }
 
 .footer__redes--título {
